<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/radiusTop"
    android:theme="@style/Theme.MaterialDialog">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/container_login_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/layout_content_header_login_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/radiusTop" >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image_view_icon_login_dialog"
                android:layout_width="@dimen/app_icon_size_min"
                android:layout_height="@dimen/app_icon_size_min"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_security"
                tools:ignore="ImageContrastCheck" />

            <TextView
                style="@style/Theme.MaterialDialog.Title"
                android:id="@+id/text_view_title_dialog_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_spacing_min"
                android:layout_marginTop="0dp"
                android:gravity="start"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/image_view_icon_login_dialog"
                android:text="@string/text_value_login"/>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/paddingTop"
            android:hint="@string/text_value_username"
            app:shapeAppearance="@style/CutInputLayout"
            app:helperTextEnabled="true"
            app:helperText="@string/text_value_username_helper"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_spacing_min"
            android:hint="@string/text_value_password"
            app:shapeAppearance="@style/CutInputLayout"
            app:helperTextEnabled="true"
            app:helperText="@string/text_value_password_helper"
            app:errorEnabled="true"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_spacing_min" >

            <com.google.android.material.button.MaterialButton
                style="@style/MaterialDialog.NegativeButton"
                android:id="@+id/button_action_negative_login_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_negative_speakable_text_value"
                android:layout_gravity="start|center"
                android:text="@string/text_value_cancel"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_action_positive_login_dialog"
                style="@style/MaterialDialog.PositiveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_positive_speakable_text_value"
                android:layout_gravity="end|center"
                android:text="@string/text_value_login_in"/>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>