<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/paddingTop"
    android:theme="@style/Theme.MaterialDialog">

    <RelativeLayout
        android:id="@+id/layout_content_header_code_alert_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_view_icon_code_alert_dialog"
            android:layout_width="@android:dimen/app_icon_size"
            android:layout_height="@android:dimen/app_icon_size"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/ic_shield_key"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/text_view_title_dialog_code_alert"
            style="@style/Theme.MaterialDialog.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/margin_spacing_min"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@id/image_view_icon_code_alert_dialog" />

    </RelativeLayout>

    <TextView
        style="@style/Theme.MaterialDialog.Message"
        android:id="@+id/text_view_message_dialog_code_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        style="@style/Theme.MaterialDialog.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingLeft="0dp"
        android:paddingEnd="0dp"
        android:text="@string/text_value_code"
        android:textAlignment="textStart" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/paddingTop"
        android:layout_marginBottom="@dimen/margin_spacing_min">

        <EditText
            android:id="@+id/edit_text_text_value_one"
            android:layout_width="@dimen/spacing_edit_text"
            android:layout_height="@dimen/spacing_edit_text"
            android:layout_marginEnd="@dimen/margin_spacing_min"
            android:autofillHints="name"
            android:background="@drawable/ic_background_transparent_font"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_value_screenplay"
            android:inputType="textCapCharacters"
            android:maxLength="1"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edit_text_text_value_two"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/edit_text_text_value_two"
            android:layout_width="@dimen/spacing_edit_text"
            android:layout_height="@dimen/spacing_edit_text"
            android:layout_marginEnd="@dimen/margin_spacing_min"
            android:autofillHints="name"
            android:background="@drawable/ic_background_transparent_font"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_value_screenplay"
            android:maxLength="1"
            android:textStyle="bold"
            android:inputType="textCapCharacters"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edit_text_text_value_three"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_text_text_value_three"
            android:layout_width="@dimen/spacing_edit_text"
            android:layout_height="@dimen/spacing_edit_text"
            android:layout_marginEnd="@dimen/margin_spacing_min"
            android:autofillHints="name"
            android:background="@drawable/ic_background_transparent_font"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_value_screenplay"
            android:maxLength="1"
            android:textStyle="bold"
            android:inputType="textCapCharacters"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edit_text_text_value_four"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_text_text_value_four"
            android:layout_width="@dimen/spacing_edit_text"
            android:layout_height="@dimen/spacing_edit_text"
            android:layout_marginEnd="@dimen/margin_spacing_min"
            android:autofillHints="name"
            android:background="@drawable/ic_background_transparent_font"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_value_screenplay"
            android:maxLength="1"
            android:textStyle="bold"
            android:inputType="textCapCharacters"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edit_text_text_value_five"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_text_text_value_five"
            android:layout_width="@dimen/spacing_edit_text"
            android:layout_height="@dimen/spacing_edit_text"
            android:layout_marginEnd="@dimen/margin_spacing_min"
            android:autofillHints="name"
            android:background="@drawable/ic_background_transparent_font"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_value_screenplay"
            android:maxLength="1"
            android:textStyle="bold"
            android:inputType="textCapCharacters"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/edit_text_text_value_six"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/edit_text_text_value_six"
            android:layout_width="@dimen/spacing_edit_text"
            android:layout_height="@dimen/spacing_edit_text"
            android:autofillHints="name"
            android:background="@drawable/ic_background_transparent_font"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/text_value_screenplay"
            android:maxLength="1"
            android:textStyle="bold"
            android:inputType="textCapCharacters"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_spacing_min"
        android:layout_marginBottom="@dimen/margin_spacing_min">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_input_layout_code_decimal_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/app_icon_size_min"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_code_decimal_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_input_layout_code_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/app_icon_size_min"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_code_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:imeOptions="actionDone"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/text_input_layout_code_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_value_reason_hint"
            app:helperText="@string/text_value_reason_helper"
            app:endIconMode="clear_text"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_edit_text_code_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:imeOptions="actionDone"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_spacing_min" >

        <com.google.android.material.button.MaterialButton
            style="@style/MaterialDialog.NegativeButton"
            android:id="@+id/button_action_negative_alert_dialog_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_negative_speakable_text_value"
            android:layout_gravity="start|center" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_action_positive_alert_dialog_code"
            style="@style/MaterialDialog.PositiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_positive_speakable_text_value"
            android:layout_gravity="end|center" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.appcompat.widget.LinearLayoutCompat>